<resources>
    <string name="app_name">El vozarrón Uniquindio</string>
    <string name="entrenadores">Entrenadores</string>
    <string name="participantes">Participantes</string>
    <string name="participantes_en_juego">Participantes en Juego</string>
    <string name="agregar_participantes">Agregar Participantes</string>
    <string name="votaciones">Votaciones</string>
    <string name="cambiaridioma">Cambiar Idioma</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="foto">Foto</string>
    <string name="ver">Ver</string>
    <string name="cedula">Cedula</string>
    <string name="facebook_app_id">673617919327987</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Login</string>
    <string name="password">Password</string>
    <string name="usuario">Usuario</string>
    <string name="genero">Genero</string>
    <string name="iniciar_sesion">Iniciar Sesión(Facebook/Local)</string>
    <string name="edad">Edad</string>
    <string name="enlace">Enlace</string>
    <string name="entrenador">Entrenador</string>
    <string name="estado">Estado</string>
    <string name="guardar">Guardar</string>
    <string name="imagen">Imagen</string>
    <string name="numero_de_votos">Numero de Votos</string>
    <string name="relacion_universidad">Relacion Universidad</string>
</resources>
