<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <TextView
        android:text="@string/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignRight="@+id/nombre"
        android:layout_alignEnd="@+id/nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:ems="10"
        android:id="@+id/nombre"
        android:layout_below="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:text="@string/genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/nombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/nombre"
        android:layout_alignEnd="@+id/nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/genero"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@android:style/Widget.AutoCompleteTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />


    <TextView
        android:text="@string/foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/genero"
        android:layout_alignEnd="@+id/genero" />

    <ImageView
        android:layout_width="129dp"
        android:layout_height="145dp"
        app:srcCompat="@drawable/jhonny"
        android:id="@+id/foto"
        android:contentDescription=""
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</LinearLayout>