<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalles_del_participante"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uniquindio.edu.co.proyectoandroid.actividades.DetallesDelParticipante">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="121dp">

            <TextView
                android:text="@string/estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:id="@+id/textView10"
                android:gravity="center"
                android:layout_below="@+id/textView13"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/enlace"
                android:layout_toStartOf="@+id/enlace"
                android:layout_alignBottom="@+id/estado" />

            <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nombre"
        android:layout_alignParentTop="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/edad"
        android:layout_above="@+id/edad"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/edad" />

    <TextView
        android:text="@string/relacion_universidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:id="@+id/textView6"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/entrenador"
        android:layout_alignTop="@+id/univercity"
        android:layout_alignBottom="@+id/univercity"
        android:layout_toLeftOf="@+id/entrenador" />

    <TextView
        android:text="@string/entrenador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:id="@+id/textView8"
        android:gravity="center"
        android:layout_above="@+id/univercity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:layout_toLeftOf="@+id/edad"
        android:layout_toStartOf="@+id/edad" />

    <TextView
        android:text="@string/numero_de_votos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/votos"
        android:layout_toStartOf="@+id/votos"
        android:layout_below="@+id/textView6"
        android:layout_above="@+id/textView13" />

    <TextView
        android:text="@string/enlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:id="@+id/textView13"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/enlace"
        android:layout_toStartOf="@+id/enlace"
        android:layout_alignBottom="@+id/enlace"
        android:layout_below="@+id/votos" />

    <Spinner
        android:id="@+id/entrenador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/edad"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <Spinner
        android:id="@+id/univercity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/entrenador"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/entrenador"
        android:layout_alignStart="@+id/entrenador" />

    <TextView
        android:text="@string/edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_below="@+id/nombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/edad"
        android:layout_toStartOf="@+id/edad"
        android:layout_above="@+id/entrenador" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edad"
        android:layout_below="@+id/nombre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/votos"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/enlace"
        android:layout_below="@+id/votos"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/textView13"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView13"
        android:layout_toEndOf="@+id/textView13" />

    <TextView
        android:text="@string/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:id="@+id/textView11"
        android:gravity="center"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/enlace"
        android:layout_toStartOf="@+id/enlace"
        android:layout_alignBottom="@+id/estado" />

            <TextView
                android:text="@string/imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:id="@+id/textView12"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/btn_guardar"
                android:layout_toStartOf="@+id/btn_guardar"
                android:layout_below="@+id/textView10"
                android:layout_above="@+id/btn_guardar" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/add"
                android:id="@+id/imageButton"
                android:layout_below="@+id/textView10"
                android:layout_toRightOf="@+id/textView12"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_alignRight="@+id/btn_guardar"
                android:layout_alignEnd="@+id/btn_guardar" />

            <Button
    android:text="@string/guardar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btn_guardar"
                android:layout_below="@+id/imageButton"
                android:layout_toRightOf="@+id/textView10" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/def"
                android:id="@+id/imageView2"
                android:layout_below="@+id/estado"
                android:layout_toRightOf="@+id/imageButton" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
