<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TableLayout
        android:id="@+id/tbl_test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:stretchColumns="1">

        <TableRow android:background="#ffffff"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="1dp">


            <TextView android:text="@string/nombre"
                android:layout_column="0"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="@color/negro"/>
            <TextView android:text="@string/foto"
                android:layout_column="1"
                android:padding="10dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/negro"/>

            <TextView android:text="@string/ver"
                android:layout_column="2"
                android:textSize="20dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/negro"/>
            <TextView android:text="" android:layout_column="3" />

        </TableRow>

        <TableRow>

            <TextView android:text="Jhonny Rivera   "
                android:layout_column="0"
                android:textSize="12dp"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/jhonny" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/verde2"
                android:layout_marginRight="1dp"
                android:paddingTop="9dp"
                android:paddingBottom="12dp"
                android:text="@string/ver"
                android:textAlignment="center"
                android:onClick="verDetalleEntrenador1"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:minHeight="0dp"
                android:textColor="#fff"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:background="#ffffff"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:paddingRight="2dp">

            <TextView android:text="Rihana"
                android:layout_gravity="center_vertical"
                android:layout_column="0" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/rihanna" />
            <Button
                android:id="@+id/contactList_btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/verde2"
                android:layout_marginRight="1dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="@string/ver"
                android:textAlignment="center"
                android:onClick="verDetalleEntrenador2"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:minHeight="0dp"
                android:textColor="#fff"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:background="#ffffff"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:paddingRight="3dp">

            <TextView android:text="Adele"
                android:layout_gravity="center_vertical"
                android:layout_column="0" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/adele" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/verde2"
                android:layout_marginRight="1dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="@string/ver"
                android:onClick="verDetalleEntrenador3"
                android:layout_gravity="center_vertical"
                android:minHeight="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />

        </TableRow>
    </TableLayout>

</RelativeLayout>